Fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,10 @@
 /* Prevent white space on the right side to appear when screensize is small */
 html, body {
      width: 100%;
-     height: 100%;
+     min-height: 100%;
      margin: 0px;
      padding: 0px; 
+     overflow-x: hidden;
 }
 
 /* Remove paddings and margins */
